<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/primaryLightColor">

    <TextView
        android:id="@+id/title"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primaryDarkColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:text="@string/produktname"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/produktName"
                    android:inputType="text"
                    android:maxLines="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/menge"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/produktMenge"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/verfallsdatum"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/verfallsdatum"
                    android:inputType="none"
                    android:maxLines="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/preis"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/preis_pro_einheit"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/barcode"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/barcode"
                    android:inputType="none"
                    android:clickable="false"
                    android:maxLines="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/einheit"
                    android:layout_gravity="center_vertical" />
                <Spinner
                    android:id="@+id/einheit"
                    android:background="@drawable/button_with_border"
                    android:layout_width="wrap_content"
                    android:spinnerMode="dropdown" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MyButton"/>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MyButton"/>
    </LinearLayout>
</LinearLayout>