<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/primaryLightColor">

    <TextView
        android:id="@+id/title"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primaryDarkColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2" >
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_gravity="end|center_vertical" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/doublepoint" />

                <LinearLayout>
                    <EditText
                        android:id="@+id/produktName"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/primaryDarkColor"
                        android:backgroundTint="@color/primaryDarkColor"
                        android:layout_marginStart="@dimen/activity_horizontal_margin" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barcode"
                    android:layout_gravity="end|center_vertical" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/doublepoint" />

                <LinearLayout>
                    <EditText
                        android:id="@+id/barcode"
                        android:inputType="number|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/primaryDarkColor"
                        android:backgroundTint="@color/primaryDarkColor"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MyButton"/>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MyButton"/>
    </LinearLayout>
</LinearLayout>